# Qavita

./: .gitignore  CMakeLists.txt  Qavita.sln
Qavita/: Qavita.aps  Qavita.cpp  Qavita.h  Qavita.pri  Qavita.pro  Qavita.qrc  Qavita.rc  Qavita.ui  Qavita.vcxproj  Qavita.vcxproj.filters  main.cpp
resources/: Qavita.qrc  Qavita.rc
src/: CMakeLists.txt  Qavita.cpp  Qavita.h  main.cpp
